2005-08-16  Christian Persch  <chpe@cvs.gnome.org>

	* embed/ephy-embed-find.c: (ephy_embed_find_activate_link):
	* embed/ephy-embed-find.h:
	* embed/mozilla/EphyFind.cpp:
	* embed/mozilla/EphyFind.h:
	* embed/mozilla/mozilla-embed-find.cpp:

	Activate the found link with a faked keypress event.

	* src/ephy-find-toolbar.c: (tab_search_key_press_cb),
	(entry_key_press_event_cb), (entry_activate_cb),
	(ephy_find_toolbar_set_embed), (ephy_find_toolbar_open),
	(ephy_find_toolbar_close):

	On enter, activate the found link instead of finding the next
	occurrence.
	Always really give focus to the find bar, instead of faking
	keypresses in the find bar entry while focusing the embed.
	Fixes bug #307216, bug #311985, bug #312419, bug #312367.

2005-08-15  Christian Persch  <chpe@cvs.gnome.org>

	* data/GNOME_Epiphany_Automation.server.in:

	Remove "-s" argument which hasn't been supported for ages.

	* data/mime-types-permissions.xml:

	Add more mime types.

	* lib/ephy-gui.c: (ephy_gui_menu_position_under_widget),
	(ephy_gui_menu_position_on_toolbar):
	* lib/ephy-gui.h:

	Improve menu positioning on toolbar buttons.

2005-08-13  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/ContentHandler.cpp:

	Check that we're not trying to open in Epiphany itself!
	Fixes bug #310023.

2005-08-13  Christian Persch  <chpe@cvs.gnome.org>

	* embed/ephy-favicon-cache.c: (ephy_favicon_cache_get):

	Reject favicons that are < 12x12.

2005-08-13  Christian Persch  <chpe@cvs.gnome.org>

	* embed/downloader-view.c: (update_download_row):

	Don't display (guint64)-1 as filesize if it's not known yet.
	Part of bug #313215.

2005-08-13  Christian Persch  <chpe@cvs.gnome.org>

	* configure.ac:

	Better gecko version check.

2005-08-13  Christian Persch  <chpe@cvs.gnome.org>
	
	* embed/mozilla/MozDownload.cpp:

	Work around mozilla bug
	https://bugzilla.mozilla.org/show_bug.cgi?id=304353 .
	Fixes bug #313215.

2005-08-13  Christian Persch  <chpe@cvs.gnome.org>
