@@ -1,5 +1,15 @@
 2005-08-16  Christian Persch  <chpe@cvs.gnome.org>
 
+	* embed/mozilla/EphyFind.cpp:
+
+	Return TRUE if the event was consumed.
+
+	* embed/mozilla/mozilla-embed-single.cpp:
+
+	More redundant code.
+
+2005-08-16  Christian Persch  <chpe@cvs.gnome.org>
+
 	* embed/ephy-embed-find.c: (ephy_embed_find_activate_link):
 	* embed/ephy-embed-find.h:
 	* embed/mozilla/EphyFind.cpp:
